# instruments

./: LICENSE  gitignore
Source Code/C++/instruments/: instruments.sln  interface.cpp  interface.h  remote.cpp  remote.h
Source Code/C++/instruments/instruments/: CMakeLists.txt  instruments.vcxproj  instruments.vcxproj.filters  interface.h  remote.cpp
Source Code/Python/: 2G.xlsx  conducted_script_testing.py  setup.py  setup1.py  testing5.py  testing6.py  testing7.py  testing8.py  unittest_CMW_WIFI.py
Source Code/Python/dist_compiled/: labinstrument-0.0.4-py3-none-any.whl  labinstrument-0.0.5-py3-none-any.whl  labinstrument-0.0.6-py3-none-any.whl  labinstrument-0.0.9-py3-none-any.whl  labinstrument-1.0.1-py3-none-any.whl  labinstrument-1.0.2-py3-none-any.whl
Source Code/Python/labinstrment/interfaces/: switch_interface.py
Source Code/Python/labinstrment/tools/: freqTool.py
Source Code/Python/labinstrument/: dist.py  interface.py  remote.py
Source Code/Python/labinstrument/SS/: __init__.py
Source Code/Python/labinstrument/interfaces/: ota_interface.py
Source Code/Python/labinstrument/tools/: buildin_ex.py  builtin_ex.py  cardSecurity.py
Source_Code/C++/instruments/: instruments.vcxproj  main.cpp
Source_Code/Python/: 5G.xlsx  README.md  conducted_script_testing.py  dist.py  setup.py  testing5.py  testing8.py  unittest_CMW_WIFI.py
Source_Code/Python/ConductedTest/: case_generator.py  conducted_GUI.py  untitled.py  untitled.ui
Source_Code/Python/labinstrument/: __init__.py  interface.py  remote.py
(+29 files in other folders)
